# prototype-termai

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  context.md  main.py  pyproject.toml  test_integration.py  test_ollama.py  test_terminal.py  test_ui.py
ai/: __init__.py  context.py  context_manager.py  filters.py  ollama_client.py  prompts.py  realtime_analyzer.py  triggers.py
docs/: status.md
docs/plan/: 00-overview.md  04-ollama-integration.md  07-optimization.md  troubleshooting.md
docs/plan/checkpoints/: checkpoint-01.md  checkpoint-02.md  checkpoint-03.md  checkpoint-04.md
examples/: basic_usage.py
plan/: 00-overview.md  01-setup.md  02-basic-terminal.md  03-tui-framework.md  04-ollama-integration.md  05-context-management.md  06-realtime-features.md  07-optimization.md  troubleshooting.md
plan/checkpoints/: checkpoint-01.md  checkpoint-02.md  checkpoint-03.md  checkpoint-04.md
src/termai/: __init__.py  __main__.py  main.py
src/termai/ai/: __init__.py  context.py  context_manager.py  filters.py  ollama_client.py  prompts.py  realtime_analyzer.py  triggers.py
src/termai/config/: __init__.py  settings.py
src/termai/terminal/: buffer.py  emulator.py  history.py  manager.py
src/termai/ui/: __init__.py  ai_sidebar.py  terminal_widget.py
src/termai/utils/: __init__.py  logger.py
terminal/: __init__.py  buffer.py  emulator.py  history.py  manager.py
tests/: __init__.py  test_integration.py  test_ollama.py  test_terminal.py  test_ui.py
ui/: __init__.py  ai_sidebar.py  app.py  terminal_widget.py
utils/: __init__.py
